# checkoff-printer

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PLAN-mqtt-integration.md  README.md  app.py  checkoff-printer.service  debug_printer_connection.py  docker-compose.yml  extract_recipes.py  mqtt_printer.py  printer_service.py  pyproject.toml  recipes.json  requirements.txt  seed-recipes.txt  test-recipes.txt
.agent/workflows/: deploy_raspberry_pi.md
.github/workflows/: commitlint.yml  deploy.yml  release.yml
backend/: Dockerfile  app.py  printer_service.py  pyproject.toml  requirements.txt
backend/formatters/: recipe.py
backend/tests/: test_extraction_batch.py
formatters/: todo.py
frontend/: Dockerfile  app.js  index.html  nginx.conf  style.css
installers/host/: checkoff-printer.service  setup_pi_permissions.sh
printers/: install.sh
static/: app.js  style.css
templates/: index.html
tests/: test_extraction_batch.py
tools/: extract_recipes.py  fetch_urls.py
